--- a/package.json
+++ b/package.json
@@ -1,27 +1,44 @@
 {
   "name": "electron-note",
+  "productName": "electron-note",
   "version": "1.0.0",
-  "description": "A desktop application built using Electron JS.",
-  "keywords": [
-    "electron-note"
-  ],
-  "homepage": "https://github.com/ferdoushasanpr/Electron-Note-Desktop-Application#readme",
-  "bugs": {
-    "url": "https://github.com/ferdoushasanpr/Electron-Note-Desktop-Application/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ferdoushasanpr/Electron-Note-Desktop-Application.git"
-  },
-  "license": "MIT",
-  "author": "Ferdous Hasan",
-  "type": "commonjs",
-  "main": "main.js",
+  "description": "My Electron application description",
+  "main": ".webpack/main",
+  "private": true,
   "scripts": {
-    "start": "electron .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
+    "publish": "electron-forge publish",
+    "lint": "eslint --ext .ts,.tsx ."
   },
+  "keywords": [],
+  "author": "Ferdous Hasan",
+  "license": "MIT",
   "devDependencies": {
-    "electron": "^39.2.7"
+    "@electron-forge/cli": "^7.11.1",
+    "@electron-forge/maker-deb": "^7.11.1",
+    "@electron-forge/maker-rpm": "^7.11.1",
+    "@electron-forge/maker-squirrel": "^7.11.1",
+    "@electron-forge/maker-zip": "^7.11.1",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.11.1",
+    "@electron-forge/plugin-fuses": "^7.11.1",
+    "@electron-forge/plugin-webpack": "^7.11.1",
+    "@electron/fuses": "^1.8.0",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "@vercel/webpack-asset-relocator-loader": "^1.7.3",
+    "css-loader": "^6.11.0",
+    "electron": "40.0.0",
+    "eslint": "^8.57.1",
+    "eslint-plugin-import": "^2.32.0",
+    "fork-ts-checker-webpack-plugin": "^7.3.0",
+    "node-loader": "^2.1.0",
+    "style-loader": "^3.3.4",
+    "ts-loader": "^9.5.4",
+    "typescript": "~4.5.4"
+  },
+  "dependencies": {
+    "electron-squirrel-startup": "^1.0.1"
   }
 }
